--- a/rsc/manifest/manifest_en.json
+++ b/rsc/manifest/manifest_en.json
@@ -2,11 +2,11 @@
   "name": "Darkness Note",
   "short_name": "Darkness Note",
   "description": "Free Software for Note Taking",
-  "start_url": "index.html",
+  "start_url": "../../index.html",
   "background_color": "rgb(45, 45, 45)",
   "theme_color": "rgb(35, 35, 35)",
   "orientation": "any",
-  "display": "fullscreen",
+  "display": "standalone",
   "icons": [
     {
       "src": "../svg/main.svg",
