--- a/rsc/manifest/manifest_en.json
+++ b/rsc/manifest/manifest_en.json
@@ -1,7 +1,7 @@
 {
   "name": "Darkness Note",
   "short_name": "Darkness Note",
-  "description": "Free Software for Note Taking",
+  "description": "Open source web application for note taking",
   "start_url": "../../index.html",
   "background_color": "rgb(45, 45, 45)",
   "theme_color": "rgb(35, 35, 35)",
@@ -12,12 +12,17 @@
       "src": "../svg/main.svg",
       "sizes": "512x512",
       "type": "image/svg",
-      "purpose": "any maskable"
+      "purpose": "any"
     }, {
       "src": "../png/main.png",
       "sizes": "512x512",
       "type": "image/png",
-      "purpose": "any maskable"
+      "purpose": "any"
+    }, {
+      "src": "../png/main_maskable.png",
+      "sizes": "512x512",
+      "type": "image/png",
+      "purpose": "maskable"
     }
   ]
 }
